# REST-FastAPI-UpdatePackeges

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  alembic-test.ini  docker-compose.yaml  dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: cb65bfa90220_table1.py
alembic_test/: env.py
alembic_test/versions/: 04d535965b49_12321.py
